# YoyoDB

./: .gitignore  CMakeLists.txt  YoyoDB.cpp  YoyoDB.h
include/: cacheManager.hpp  database.hpp  databaseSystem.hpp  index.hpp  indexEntry.hpp  storage.hpp  storageIndex.hpp
include/fieldIndex/: FieldIndex.hpp  baseFieldIndex.hpp  uniqueFieldIndex.hpp
include/query/: condition.hpp  queryExecutor.hpp  queryParser.hpp
src/: cacheManager.cpp  database.cpp  databaseSystem.cpp  index.cpp  storage.cpp  storageIndex.cpp
src/fieldIndex/: baseFieldIndex.cpp  fieldIndex.cpp  uniqueFieldIndex.cpp
src/query/: condition.cpp  queryExecutor.cpp  queryParser.cpp
